test/types/string/assignToChar/testCArray.10.good
Helpers.chpl:39: In function 'testCArrayVal':
Helpers.chpl:42: error: Cannot assign to uint(8) from string
  testCArray.chpl:24: called as testCArrayVal(strBytes: string, type toType = uint(8))
